--- a/pages/index.html
+++ b/pages/index.html
@@ -271,6 +271,7 @@
         </div>
       </div>
     </section>
+    <%- include('./layout/footer'); -%>
     <script type="module" src="../main.js"></script>
     <script type="module" src="../assets/js/home.js"></script>
   </body>
